# models/create_incident_good_response.go
@@ -1,117 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// CreateIncidentGoodResponse create incident good response
-//
-// swagger:model CreateIncidentGoodResponse
-type CreateIncidentGoodResponse struct {
-	CreateIncident
-
-	// created
-	Created bool `json:"created,omitempty"`
-}
-
-// UnmarshalJSON unmarshals this object from a JSON structure
-func (m *CreateIncidentGoodResponse) UnmarshalJSON(raw []byte) error {
-	// AO0
-	var aO0 CreateIncident
-	if err := swag.ReadJSON(raw, &aO0); err != nil {
-		return err
-	}
-	m.CreateIncident = aO0
-
-	// AO1
-	var dataAO1 struct {
-		Created bool `json:"created,omitempty"`
-	}
-	if err := swag.ReadJSON(raw, &dataAO1); err != nil {
-		return err
-	}
-
-	m.Created = dataAO1.Created
-
-	return nil
-}
-
-// MarshalJSON marshals this object to a JSON structure
-func (m CreateIncidentGoodResponse) MarshalJSON() ([]byte, error) {
-	_parts := make([][]byte, 0, 2)
-
-	aO0, err := swag.WriteJSON(m.CreateIncident)
-	if err != nil {
-		return nil, err
-	}
-	_parts = append(_parts, aO0)
-	var dataAO1 struct {
-		Created bool `json:"created,omitempty"`
-	}
-
-	dataAO1.Created = m.Created
-
-	jsonDataAO1, errAO1 := swag.WriteJSON(dataAO1)
-	if errAO1 != nil {
-		return nil, errAO1
-	}
-	_parts = append(_parts, jsonDataAO1)
-	return swag.ConcatJSON(_parts...), nil
-}
-
-// Validate validates this create incident good response
-func (m *CreateIncidentGoodResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	// validation for a type composition with CreateIncident
-	if err := m.CreateIncident.Validate(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// ContextValidate validate this create incident good response based on the context it is used
-func (m *CreateIncidentGoodResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	// validation for a type composition with CreateIncident
-	if err := m.CreateIncident.ContextValidate(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CreateIncidentGoodResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CreateIncidentGoodResponse) UnmarshalBinary(b []byte) error {
-	var res CreateIncidentGoodResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
