# models/get_incidents_good_response.go
@@ -1,130 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// GetIncidentsGoodResponse get incidents good response
-//
-// swagger:model GetIncidentsGoodResponse
-type GetIncidentsGoodResponse struct {
-
-	// incidents
-	Incidents []*CreateIncident `json:"incidents"`
-
-	// user Id
-	// Required: true
-	UserID *string `json:"userId"`
-}
-
-// Validate validates this get incidents good response
-func (m *GetIncidentsGoodResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateIncidents(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateUserID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *GetIncidentsGoodResponse) validateIncidents(formats strfmt.Registry) error {
-	if swag.IsZero(m.Incidents) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Incidents); i++ {
-		if swag.IsZero(m.Incidents[i]) { // not required
-			continue
-		}
-
-		if m.Incidents[i] != nil {
-			if err := m.Incidents[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("incidents" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *GetIncidentsGoodResponse) validateUserID(formats strfmt.Registry) error {
-
-	if err := validate.Required("userId", "body", m.UserID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this get incidents good response based on the context it is used
-func (m *GetIncidentsGoodResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateIncidents(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *GetIncidentsGoodResponse) contextValidateIncidents(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Incidents); i++ {
-
-		if m.Incidents[i] != nil {
-			if err := m.Incidents[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("incidents" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *GetIncidentsGoodResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *GetIncidentsGoodResponse) UnmarshalBinary(b []byte) error {
-	var res GetIncidentsGoodResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
