# models/get_incidents_user_id_not_found_response.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// GetIncidentsUserIDNotFoundResponse get incidents user Id not found response
-//
-// swagger:model GetIncidentsUserIdNotFoundResponse
-type GetIncidentsUserIDNotFoundResponse struct {
-
-	// user Id
-	// Required: true
-	UserID *string `json:"userId"`
-}
-
-// Validate validates this get incidents user Id not found response
-func (m *GetIncidentsUserIDNotFoundResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateUserID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *GetIncidentsUserIDNotFoundResponse) validateUserID(formats strfmt.Registry) error {
-
-	if err := validate.Required("userId", "body", m.UserID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this get incidents user Id not found response based on context it is used
-func (m *GetIncidentsUserIDNotFoundResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *GetIncidentsUserIDNotFoundResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *GetIncidentsUserIDNotFoundResponse) UnmarshalBinary(b []byte) error {
-	var res GetIncidentsUserIDNotFoundResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
