# swagger.yaml
@@ -146,210 +146,6 @@ paths:
  
 definitions:
 
-  CreateIncident:
-    type: "object"
-    required:
-      - incidentId
-      - doctorId
-    properties:
-      incidentId:
-        type: "string"
-      dateMicros:
-        type: "number"
-        format: "float"
-        example: 1234.8
-      doctorId:
-        type: "string"
-      hospitalId:
-        type: "string"
-      patientGender:
-        type: "string"
-      patientAgeMonths:
-        type: "integer"
-        example: 12
-      prognosis:
-        type: "string"
-      chokingObject:
-       $ref: "#/definitions/ChokingObject"
-      
-  CreateIncidentGoodResponse:
-    allOf:
-      - $ref: "#/definitions/CreateIncident"
-      - type: "object" 
-        properties:
-          created:
-            type: boolean
-      
-          
-        
-     
-    
-  
-  CreateIncidentInvalidIncidentResponse:
-      allOf:
-      - $ref: "#/definitions/CreateIncident"
-      - type: "object" 
-        properties:
-          created:
-            type: boolean
-            default: false
-  
-  CreateIncidentUserIdNotFoundResponse:
-      allOf:
-      - $ref: "#/definitions/CreateIncident"
-      - type: "object" 
-        properties:
-          created:
-            type: boolean
-            default: false
-  
-  GetIncidents:
-    type: "object"
-    required:
-      - userId
-    properties:
-      userId:
-        type: string
-  
-  
-  GetIncidentsUserIdNotFoundResponse:
-    type: "object"
-    required:
-      - userId
-    properties:
-      userId:
-        type: string
-        
-  GetIncidentsGoodResponse:
-    type: "object"
-    required:
-      - userId
-    properties:
-      userId:
-        type: string
-      incidents:
-        type: array
-        items: 
-          $ref: "#/definitions/CreateIncident"
-          
-        
-  
-  
-  UpdateIncident:
-    allOf:
-    - $ref: "#/definitions/CreateIncident"
-    - type: "object"
-
-  UpdateIncidentGoodResponse:
-    allOf:
-    - $ref: "#/definitions/CreateIncident"
-    - type: "object"
-      properties:
-        updated:
-          type: boolean
-          default: true         
-  
-  
-  UpdateIncidentIncidentIdNotFoundResponse:
-    allOf:
-    - $ref: "#/definitions/CreateIncident"
-    - type: "object"
-      properties:
-        updated:
-          type: boolean
-          default: false
-          
-  
-  
-  
-  DeleteIncident:
-      type: "object"
-      required:
-        - incidentId
-      properties:
-        incidentId:
-          type: string
-          
-  DeleteIncidentIncidentIdNotFoundResponse:
-      type: "object"
-      required:
-        - incidentId
-      properties:
-        incidentId:
-          type: string
-        deleted:
-          type: boolean
-          default: true
-  
-  DeleteIncidentGoodResponse:
-      type: "object"
-      required:
-        - incidentId
-      properties:
-        incidentId:
-          type: string
-        deleted:
-          type: boolean
-          default: true
-  
-  ChokingObject:
-    type: "object"
-    required:
-      - chokingObjectId
-    properties:
-      chokingObjectId:
-        type: "string"
-      name:
-        type: "string"
-      shippable:
-        type: "boolean"
-      brand:
-        type: "string"
-      shape: 
-        type: "string"
-      largestLengthMillimeters:
-        type: "number"
-        format: "double"
-        example: 2.42
-      largestWidthMillimeters:
-        type: "number"
-        format: "double"
-        example: 2.42
-      largestDepthMillimeters:
-        type: "number"
-        format: "double"
-        example: 2.42
-      objectDescription:
-        type: "string"
-      consistency:
-        type: "string"
-      contour:
-        type: "array"
-        items:
-          type: "string"
-          example: 
-            - "inside"
-            - "outside"
-      material:
-        type: "string"
-      objectLocation:
-        type: "string"
-      removalTechnique:
-        type: "string"
-      severity:
-        type: "string"
-      impairment:
-        type: "string"
-      ingestionDescription:
-        type: "string"
-      objectImageUrls:
-        type: "array"
-        items:
-          type: "string"
-          example: 
-            - "url1"
-            - "url2"
-            
   CreateUser:
     type: object
     required:
